@@ -8,6 +8,7 @@ CartoWeb HEAD
 - Added addRowSelector table rule tool.
 - Added GET capabilities to outline plugin to generate on-the-fly point, line or polygon outline via URL.
 - Added new --clean-views and --clean-accounting options to cw3setup.php
+- Added LDAP storage for auth plugin
 
 2006-08-31: CartoWeb 3.3.0
 ==========================
